# toy-renderer

./: .gitignore  CMakeLists.txt  README.md  ToyRenderer.sln
ToyRenderer/: ToyRenderer.vcxproj
src/: framebuffer.cpp  interactive.cpp  main.cpp  main.h  mesh.cpp  osmesa.cpp  render.cpp  utils.cpp
